2001-05-13  Rob Savoye  <rob@peggyo.welcomehome.org>

	* lib/target.exp: Fix the regsub line where it prunes -fPIC
	warnings so the text variable is on the same line.

2001-05-09  Rob Savoye  <rob@peggyo.welcomehome.org>

	* runtest.exp: Add new command line option, --status (or -st) to
	toggle whether Tcl script bugs in test drivers should be
	propogated as an error to the shell.

2001-05-08  Rob Savoye  <rob@peggyo.welcomehome.org>

	* lib/dejagnu.exp: Trim off test state part of the message, so we
	don't duplicate it.
	* runtest.exp: Set the exit status when their are Tcl script bugs,
	so make notices the errors. (contributed by Martin Muenstermann
	<muenstermann@trustcenter.de>)

2001-05-06  Rob Savoye  <rob@blackpeter.welcomehome.org>

	* debian/rules: Install all the doc formats.
	* redhat/dejagnu.spec: Install all the doc formats.
	* Clean.tcl: Also nuke all Emacs backup files.
	* Makefile.am: Fix dependencies on tarball target. Add new target
	to build Debian packages. Add $(includedir) to install-data-local
	target so dejagnu.h gets installed in the right place.

2001-05-03  Rob Savoye  <rob@peggyo.welcomehome.org>

	* doc/Makefile.am: Make all paths absolute, cause some versions of
	the db2* tools are braindead.
	* doc/overview.sgml: Update version numbers and log.
	* doc/user.sgml: Add mention of dejagnu.h header file.
	* doc/ref.sgml: Add chapter on dejagnu.h header file for unit
	testing.
	* config/default.exp: New file for default config settings for
	simple native testsuites that don't need anything else.
	* lib/dejagnu.exp: Add $text\r\n to all strings, to make sure we
	only get one line at a time.
	* testsuite/libdejagnu: New directory for dejagnu library test
	cases.
	* testsuite/libdejagnu/unit.cc: Test case for dejagnu.h.
	* testsuite/libdejagnu/tunit.exp: Test driver for dejagnu.h.
	* testsuite/libdejagnu/Makefile.am: New makefile to build the test
	case.
	* testsuite/libdejagnu/Makefile.in: Generated.